# cppdesignpatterns

./: .gitignore  CMakeLists.txt  main.cpp
include/: IStrategy.h  MemberInitializer.h  MyFactory.h  MySingleton.h
src/: IStrategy.cpp  MembeInitilizer.cpp  MyFactory.cpp  MySingleton.cpp
